# legal-code-rag

./: README.md  pyproject.toml  schema.py  utils.py
data/: questions_code_civil.json  questions_code_civil_query_rewrite.json
data/legifrance/: Code civil.json  Code de la propriété intellectuelle.json  Code de la route.json
data_ingestion/: constants.py  nodes_processing.py  preprocess_legifrance_data.py  window_nodes.py
evaluation/: custom_evaluators.py  eval_with_llamaindex.py  generate_questions.py
notebooks/: evaluate_with_llamaindex.ipynb
query/: constants.py  query_engine.py  routing.py
retriever/: embeddings.py  get_retriever.py
