[tool.poetry]
name = "code-rag"
version = "0.1.0"
description = ""
authors = ["HamzaG737 <hamza96gharbi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
llama-index = "^0.10.6"
loguru = "^0.7.2"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-embeddings-mistralai = "^0.1.3"
openai = "^1.13.3"
llama-index-embeddings-openai = "^0.1.6"
pylegifrance = {git = "https://github.com/rdassignies/pylegifrance"}
ipywidgets = "^8.1.2"
pandas = "^2.2.1"
llama-index-vector-stores-qdrant = "^0.1.4"
qdrant-client = "^1.8.0"
llama-index-llms-openai = "^0.1.12"
fastembed = "^0.2.5"
llama-index-embeddings-fastembed = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
